@@ -6,6 +6,8 @@ Version - 2.7 -
 -Small changes to order of arguments in bin_cal3TimePaleoPhy
 -Added argument maxAttempts to simFossilRecord so that simFossilRecord will end after some number of failed attempts. Default is Inf. Thanks W. Andrew Barr for this suggestion in issue #1!
 -Added example for bin_timePaleoPhy with minimum node ages AND random resolution of polytomies
+-Fixed bug pointed out by Armin Elsler of Bristol, that randomly resolving polytomies and setting minimum node ages with bin_timePaleoPhy led to an error, due to bin_timePaleoPhy resolving polytomies before sending to timePaleoPhy (which leads to errors)
+-Modified cal3TimePaleoPhy so that if randres=TRUE and node age minimums were used, that node age locks were applied to the correct nodes post random resolution of polytomies
 -
 
 Version - 2.6 - 12-01-15
